add script to open car pages when click more details button inpremiumCars html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
@@ -118,7 +118,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 49.50</p>
-                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaCorollaAxio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 49.50</p>
-                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark PeroduaBezzaPrimeSedan">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 60.00</p>
-                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAllion">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 65.00</p>
-                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAxioNKR165">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaCorollaAxio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark PeroduaBezzaPrimeSedan">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                                         <br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAllion">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAxioNKR165">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaCorollaAxio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -255,7 +255,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark PeroduaBezzaPrimeSedan">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAllion">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAxioNKR165">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -299,7 +299,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaCorollaAxio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -311,7 +311,7 @@
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAllion">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -323,7 +323,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAxioNKR165">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +340,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark PeroduaBezzaPrimeSedan">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -358,7 +358,7 @@
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00<br> Price per
                                         Extra Km : Rs 49.50 </p>
-                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaCorollaAxio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -371,7 +371,7 @@
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00<br> Price per
                                         Extra Km : Rs 49.50 </p>
-                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark PeroduaBezzaPrimeSedan">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -384,7 +384,7 @@
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 <br> Price per
                                         Extra Km : Rs 60.00</p>
-                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAllion">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -397,7 +397,7 @@
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00<br> Price per
                                         Extra Km : Rs 65.00 </p>
-                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAxioNKR165">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -417,7 +417,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaCorollaAxio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -429,7 +429,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark PeroduaBezzaPrimeSedan">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -441,7 +441,7 @@
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAllion">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -453,7 +453,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaAxioNKR165">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -506,7 +506,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="assests/images/Premium_Cars/Toyota_Corolla_Axio-NZE141/interior.jpg" class="d-block w-100" alt="...">
+                                <img src="assests/images/Premium_Cars/Toyota_Corolla_Axio-NZE141/interior.jpg" class="d-block w-100" alt="..." height="445px">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Interior View</h5>
                                     <p>This is a image of Toyota Corolla Axio/ NZE141 car interior view </p>
