--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
@@ -118,7 +118,7 @@
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 100.00
                                     </p>
-                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark MercedesBenz">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 100.00</p>
-                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark BMWi8">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 85.00</p>
-                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaPremio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br>Two passengers can travel in this car<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark BMWi8">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark MercedesBenz">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaPremio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark MercedesBenz">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark BMWi8">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -241,7 +241,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaPremio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark MercedesBenz">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -278,7 +278,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark BMWi8">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaPremio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 <br> Price per
                                         Extra Km : Rs 100.00</p>
-                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark MercedesBenz">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 <br> Price per
                                         Extra Km : Rs 100.00</p>
-                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark BMWi8">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -339,7 +339,7 @@
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 <br> Price per
                                         Extra Km : Rs 85.00</p>
-                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaPremio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -359,7 +359,7 @@
                                     <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="BMWi8.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark BMWi8">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -371,7 +371,7 @@
                                     <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 10,000 <br> Monthly
                                         Rate : Rs 227,150.00 </p>
-                                    <a href="ToyotaPremio.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark ToyotaPremio">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -388,7 +388,7 @@
                                     <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br>Fuel Type : Diesel<br> Daily
                                         Rate : 18,000 <br> Monthly
                                         Rate : Rs 300,000.00 </p>
-                                    <a href="Mercedes-Benz.html" class="btn btn-dark">More Details</a>
+                                    <a class="btn btn-dark MercedesBenz">More Details</a>
                                 </div>
                             </div>
                         </div>
