xreate adminDashboard.html html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -75,7 +75,7 @@
                     </form>
                     <label class="ms-2 mt-3" style="font-family: 'Convergence', sans-serif;">Don't have an
                         account?</label>
-                    <a class="navbar-brand fw-bold" href="signUp.html">SignUp</a>
+                    <a class="navbar-brand fw-bold" href="pages/signUp.html">SignUp</a>
                 </div>
             </div>
         </div>
