--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Car Rental System</title>
     <meta content="width=device-width initial-scale=1" name="viewport">
-    <link href="assests/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assests/style.css" rel="stylesheet">
+    <link href="../assests/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assests/style.css" rel="stylesheet">
 
     <!-----------------------------fonts-------------------------------------->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,7 +18,7 @@
     <!------------------------------------------------------------------->
     <style>
         #loginImage {
-            background-image: url("assests/images/sigiUp_pg.jpg");
+            background-image: url("../assests/images/sigiUp_pg.jpg");
             background-position: center;
             background-size: cover;
         }
@@ -83,7 +83,7 @@
                     </form>
                     <label class="ms-2 mt-3" style="font-family: 'Convergence', sans-serif;">Already have an
                         account?</label>
-                    <a class="navbar-brand fw-bold" href="index.html">LogIn</a>
+                    <a class="navbar-brand fw-bold" href="../index.html">LogIn</a>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
 
 </main>
 
-<script src="assests/js/bootstrap.min.js"></script>
-<script src="assests/JQuery/jquery-3.6.1.min.js"></script>
+<script src="../assests/js/bootstrap.min.js"></script>
+<script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
 </body>
 </html>
