--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Car Rental System</title>
   <meta content="width=device-width initial-scale=1" name="viewport">
-  <link href="assests/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assests/style.css" rel="stylesheet">
+  <link href="../assests/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assests/style.css" rel="stylesheet">
 
   <!-----------------------------fonts-------------------------------------->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -22,6 +23,7 @@
   <!------------------------------------------------------------------->
 
 </head>
+
 <body class="bg-black">
 
 <header>
@@ -29,7 +31,7 @@
       <!---------------------logo----------------------->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
-          <img src="assests/images/logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top ms-1" style="border-radius: 40px;">
+          <img src="../assests/images/logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top ms-1" style="border-radius: 40px;">
           <label class="navbar-brand ms-3" style="font-family: 'Convergence', sans-serif;">Easy Car Rental PVT(Ltd)</label>
         <label class="fw-bold ms-1">|</label>
       </div>
@@ -60,7 +62,7 @@
           <label class="col-12 text-end">Hansika Perera</label>
       </div>
       <button class="navbar-toggler d-inline-block align-text-top align-items-end col-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-        <img src="assests/images/profile-user.png" width="50px" height="50px">
+        <img src="../assests/images/profile-user.png" width="50px" height="50px">
       </button>
     </div>
 
@@ -73,7 +75,7 @@
     </div>
     <div class="row justify-content-center" style="height: 100px">
       <div class="col-3 align-self-center">
-        <img src="assests/images/profile-user.png "  width="85px" height="85px">
+        <img src="../assests/images/profile-user.png " width="85px" height="85px">
       </div>
     </div>
     <form class="row g-1 gx-2 ms-3 me-3 fs-6">
@@ -162,19 +164,19 @@
     <h2 class="text-center mt-4" style="color: white">Our Fleet</h2>
     <div class="row" id="row" style="height: 260px">
       <div class="box mt-0">
-        <a href="generalCars.html"><img src="assests/images/General_Cars/general_cars.jpg"></a>
+        <a href="generalCars.html"><img src="../assests/images/General_Cars/general_cars.jpg"></a>
         <div class="content">
           <h2>General Cars<br> <span>We have 30 cars <br>to rent in <br>general car category</span></h2>
         </div>
       </div>
       <div class="box mt-0 ">
-        <a href="premiumCars.html"><img src="assests/images/Premium_Cars/premium_cars.jpg"></a>
+        <a href="premiumCars.html"><img src="../assests/images/Premium_Cars/premium_cars.jpg"></a>
         <div class="content">
           <h2>Premium Cars <br> <span>We have 14 cars <br> to rent in <br> premium car category</span></h2>
         </div>
       </div>
       <div class="box mt-0">
-        <a href="luxuryCars.html"><img src="assests/images/Luxury_Cars/luxury_Carls.jpg"></a>
+        <a href="luxuryCars.html"><img src="../assests/images/Luxury_Cars/luxury_Carls.jpg"></a>
         <div class="content">
           <h2>Luxury Cars <br> <span>We have 30 cars <br> to rent in <br> luxury car category</span></h2>
         </div>
@@ -283,7 +285,8 @@
 </main>
 
 
-<script src="assests/js/bootstrap.min.js"></script>
-<script src="assests/JQuery/jquery-3.6.1.min.js"></script>
+<script src="../assests/js/bootstrap.min.js"></script>
+<script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
 </body>
+
 </html>
