design menu bar in adminDashboard.html html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -66,11 +66,11 @@
 
 <main class="container-fluid">
     <div class="row" style="height:654px">
-        <div class="col-2 bg-warning" id="menuBar">
-            <div class="row mt-3 ms-0 me-0" style="height: 624px;border-radius: 12px">
-                <div class="col-12 bg-info" style="height: 130px;border-radius: 12px">
+        <div class="col-2 bg-black" id="menuBar">
+            <div class="row mt-3 ms-0 me-0 text-center" style="height: 624px;border-radius: 12px">
+                <div class="col-12 bg-light" style="height: 130px;border-radius: 12px">
                     <div class="row">
-                        <div class="col-12 text-center mt-1">
+                        <div class="col-12 mt-1">
                             <label class="col-12 fw-bold">Admin</label>
                             <label class="col-12 fs-5 fw-bold">Hansika Perera</label>
                         </div>
@@ -84,22 +84,72 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 bg-success">
-                    <div class="row">
-                        <div class="col-3">
-                            <label style="width: max-content"> <i class="fa-solid fa-house-chimney"></i> Home </label>
+                <div class="row bg-light ms-2 mt-3" style="height: 470px; width: 214px; border-radius: 12px">
+                    <div class="col-12 mt-3">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-house-chimney"></i> Home </label>
+                            </div>
                         </div>
                     </div>
-
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-car-side"></i> Cars </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-users"></i> Users </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"><i class="fa-solid fa-users-rectangle"></i> Driver </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-file"></i> Rents </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-money-bill-transfer"></i> Payments </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-message"></i> Request </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-coins"></i> Incomes </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-screwdriver-wrench"></i> Maintains </label>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 bg-success">car</div>
-                <div class="col-12 bg-success">users</div>
-                <div class="col-12 bg-success">drivers</div>
-                <div class="col-12 bg-success">rents</div>
-                <div class="col-12 bg-success">payments</div>
-                <div class="col-12 bg-success">request</div>
-                <div class="col-12 bg-success">income</div>
-                <div class="col-12 bg-success">maintain</div>
+
 
             </div>
         </div>
